# animanga_api

./: .dockerignore  .env_template  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml.bkp  rust.yml
src/: lib.rs  main.rs
src/constructor/: mod.rs
src/constructor/anime/: anime9.rs  crunchyroll.rs  mod.rs
src/constructor/jikan/: anime.rs  manga.rs  mod.rs
src/constructor/manga/: mangadex.rs
src/constructor/myanimelist/: anime.rs  manga.rs
src/handlers/: mod.rs
src/handlers/anime/: import.rs  main.rs  mod.rs  request.rs  search.rs  user.rs
src/handlers/manga/: main.rs  mod.rs  search.rs  search.rs.bkp  user.rs
src/handlers/status/: export.rs  import.rs  main.rs  mod.rs
src/handlers/user/: auth.rs  main.rs  mod.rs  user_structs.rs
src/handlers/ws/: main.rs
src/middleware/: anime_meilisearch.rs.bkp  caching.rs  logger.rs  mod.rs  redis.rs.bkp
src/modules/: error_handler.rs  meilisearch.rs  mod.rs  request.rs  tmp.bkp
src/tests/: mod.rs  user.rs
