[package]
name = "api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
surrealdb = "1.4.0"
redis = "0.25.3"
meilisearch-sdk = "0.25.0"
serde_json = "1.0.116"
log = "0.4.21"
env_logger = "0.11.3"
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = "0.12.3"
regex = "1.10.4"
#crypto = "0.5.1"
#argon2 = "0.5.3"
#futures = "0.3.30"
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"


[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.64" , features = ["vendored"]}

[target.'cfg(windows)'.dependencies]
#winhttp = "0.4.0"

#[profile.release]
# panic = "abort" # Optional but recommended for better performance in release builds
# rustflags = ["-C", "recursion_limit=256"]
#recursion_limit = 500
