[package]
name = "api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-cors = "0.7.0"
actix-web-actors = "4.3.0"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
surrealdb = "1.5.4"
surrealdb-core = "2.0.0-1.5.4"
redis = "0.26.0"
serde_json = "1.0.121"
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = "0.12.5"
regex = "1.10.5"
#crypto = "0.5.1"
#argon2 = "0.5.3"
#futures = "0.3.30"
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
chrono = "0.4.38"
actix = "0.13.5"


[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.66" , features = ["vendored"]}

[target.'cfg(windows)'.dependencies]
#winhttp = "0.4.0"

#[profile.release]
# panic = "abort" # Optional but recommended for better performance in release builds
# rustflags = ["-C", "recursion_limit=256"]
#recursion_limit = 500
