[package]
name = "api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-web-actors = "4.3.1+deprecated"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.82"
surrealdb = "2.0.1"
surrealdb-core = "2.0.1"
redis = "0.27.2"
serde_json = "1.0.128"
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = "0.12.7"
regex = "1.10.6"
#crypto = "0.5.1"
#argon2 = "0.5.3"
#futures = "0.3.30"
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
chrono = "0.4.38"
actix = "0.13.5"


[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.66" , features = ["vendored"]}

# [target.'cfg(windows)'.dependencies]
# winhttp = "0.4.0"

#[profile.release]
# panic = "abort" # Optional but recommended for better performance in release builds
# rustflags = ["-C", "recursion_limit=256"]
#recursion_limit = 500
